samples/_failures_safe/1761523328_0294fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2829fde2.c: In function ‘main’:
./samples/SAFE/__tmp_2829fde2.c:138:17: error: expected declaration or statement at end of input
  138 |                 return 1;
      |                 ^~~~~~
./samples/SAFE/__tmp_2829fde2.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2829fde2.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2829fde2.c:138:17: error: expected declaration or statement at end of input
